# sql-agent-demo

./: .gitignore  README.md  pyproject.toml
ai/: README.md  create_db.py  langchain_create_agent.ipynb  sql_agent.py
ai/csv_templates/: diagnosis.csv  encounters.csv  patients.csv
demo/: README.md  app.py
demo/static/: index.html  script.js  style.css
